# dw

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  generate.py  make_atlas.sh  make_python_env.sh
cmake/: FindPugiXML.cmake  FindSDL2.cmake  FindSDL2_image.cmake
resource_generation/: generate.py  generate_sprites.sh  generation.py  utility.py
resource_generation/image/: process_image.py
resource_generation/render/: blender_object.py  render_object.py  utility.py
resource_generation/result_processing/: atlas.py  process_image.py
resource_generation/src/: generate.py  generation.py
resource_generation/src/rendering/: blender_object.py  create_cube.py  utility.py
resource_generation/src/result_processing/: process_image.py
resource_generation/texture_generation/: common.py  cube_texture.py  slope_texture.py
src/: CMakeLists.txt  Main.cpp
src/application/: Application.cpp  Application.hpp  ApplicationError.cpp  ApplicationError.hpp  CMakeLists.txt  SDLError.hpp
src/atlas_init/: BlockAtlas.cpp  BlockAtlas.hpp  CMakeLists.txt  XMLAttributeError.cpp  XMLAttributeError.hpp  XMLChildError.cpp  XMLChildError.hpp
src/graphics/: CMakeLists.txt  SDLError.cpp  SDLError.hpp  SDLImgError.cpp  SDLImgError.hpp  Sprite.cpp  Sprite.hpp  SpriteAtlas.cpp  SpriteAtlas.hpp  Texture.cpp  Texture.hpp
src/logger/: CMakeLists.txt  GlobalLogger.cpp  GlobalLogger.hpp  LogLevel.hpp  Logger.cpp  Logger.hpp
src/resource_generation/: atlas.py  build_error.py  generate.py  image.py  process_image.py  utility.py
src/resource_generation/image/: atlas.py
src/resource_generation/render/: blender_object.py  render_object.py  utility.py
src/resource_generation/texture_generation/: __init__.py  common.py  cube_texture.py  floor_texture.py  slope_texture.py
src/utility/: CMakeLists.txt  Defs.hpp  Point.hpp  Point2.hpp  Point3.hpp  Rect.hpp
src/world/: AtlasFormat.hpp  AtlasInit.cpp  AtlasInit.hpp  Block.cpp  Block.hpp  BlockType.cpp  BlockType.hpp  CMakeLists.txt  Direction.cpp  Direction.hpp  HeightMap.cpp  HeightMap.hpp  Layer.cpp  Layer.hpp  MaterialType.cpp  MaterialType.hpp  SimplexNoise.cpp  SimplexNoise.hpp  Size.hpp  Transformation.cpp  Transformation.hpp  World.cpp  World.hpp
src/world/block/: Block.cpp  Block.hpp  BlockType.cpp  BlockType.hpp  CMakeLists.txt  Cube.cpp  Cube.hpp  DirectionalBlock.cpp  DirectionalBlock.hpp  Floor.cpp  Floor.hpp  Material.cpp  Material.hpp  ProtoBlockSet.cpp  ProtoBlockSet.hpp  Selection.cpp  Selection.hpp  Slope.cpp  Slope.hpp  Volume.cpp  Volume.hpp
